--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
-tabletop_exerciseNODE_ENV=development
+NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/tabletop_exercise
 JWT_SECRET=your_super_secret_jwt_key_change_in_production
 JWT_EXPIRE=7d
-SOCKET_PORT=5001
+
+# Frontend URL for CORS (not used anymore since we allow all origins for local network)
+FRONTEND_URL=http://localhost:3000
